--- a/Workflow/Workflow.Rmd
+++ b/Workflow/Workflow.Rmd
@@ -134,6 +134,7 @@ library(coda)
 library(goseq)
 library(viridis)
 library(pheatmap)
+library(ggplot2)
 ```
 
 To obtain gene annotations used in thiw workflow, we used the `biomaRt` package.
@@ -278,7 +279,8 @@ We can now visualize the different factors stored in the `colData` slot.
 
 ```{r}
 # Cell types identified by clustering
-plotReducedDim(droplet.sce, use_dimred = "PCA", colour_by = "subCellType")
+plotReducedDim(droplet.sce, use_dimred = "PCA", colour_by = "subCellType", alpha = 1) + 
+  scale_fill_manual(values = c("coral4", "steelblue", "limegreen"))
 ```
 
 The first PC separates the two different cell types while the second PC captures outlying cells.
@@ -543,8 +545,8 @@ We can visualize individual genes using `scater`.
 ```{r violin-plots}
 # Expression of Meox2 in both conditions
 plotExpression(droplet.sce, features = "ENSMUSG00000036144", x = "cellType", 
-               colour_by = "cellType")
-plotReducedDim(droplet.sce, use_dimred = "PCA", colour_by = "ENSMUSG00000036144")
+               colour_by = "cellType") + scale_fill_manual(values = c("coral4", "limegreen"))
+plotReducedDim(droplet.sce, use_dimred = "PCA", colour_by = "ENSMUSG00000036144", alpha = 1)
 ```
 
 # Summary 
