--- a/Workflow/Workflow.Rmd
+++ b/Workflow/Workflow.Rmd
@@ -3,17 +3,22 @@ title: "A BASiCS workflow for expression variability analysis using scRNA-Seq da
 author:
 - name: Nils Eling
   affiliation: 
-  - &EBI European Molecular Biology Laboratory, European Bioinformatics Institute (EMBL-EBI), Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, UK
-  - &CRUK Cancer Research UK Cambridge Institute, University of Cambridge, Li Ka Shing Centre, Cambridge, CB2 0RE, UK
+  - &EBI European Molecular Biology Laboratory, European Bioinformatics 
+  Institute, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, UK
+  - &CRUK Cancer Research UK Cambridge Institute, University of Cambridge, 
+  Li Ka Shing Centre, Cambridge, CB2 0RE, UK
 - name: John C. Marioni
   affiliation: 
   - *EBI
   - *CRUK
 - name: Catalina A. Vallejos
   affiliation: 
-  - The Alan Turing Institute, British Library, 96 Euston Road, London NW1 2DB, UK
-  - Department of Statistical Science, University College London, 1-19 Torrington Place, London WC1E 7HB, UK
-  email: INSERT.EMAIL
+  - MRC Human Genetics Unit, Institute of Genetics & Molecular Medicine, 
+  University of Edinburgh, Western General Hospital, Crewe Road, Edinburgh
+  EH4 2XU, UK
+  - The Alan Turing Institute, British Library, 96 Euston Road, London 
+  NW1 2DB, UK
+  email: catalina.vallejos@igmm.ed.ac.uk
 abstract: Heterogeneity in cellular responses is an inherent feature of biological systems. Stochastic and deterministic differences between individual cells on the transcriptional level introduce expression variability in cell populations. Single-cell RNA sequencing (scRNA-Seq) has been introduced to quantify expression variability across hundreds to thousands of cells.While scRNA-Seq is prone to high degrees of technical noise, the addition of external spike-in RNA or repetitions of experiments can be used to quantify technical noise. Here, we introduce a computational workflow to quantify and test for changes in biological variability in gene expression from scRNA-Seq data using the BASiCS package. The outlined analysis highlights possible confounding effects on variability measures, such as expression level and technical noise, and gives detailed analysis how to avoid these confounders. Furthermore, we exemplify analsyses of a dataset containing spike-in genes, such as data generated using the Fluidigm\@ C1 system, as well as a droplet-based dataset for which reads of spike-in RNA is not available. We will first introduce simple analyses to find highly and lowly variable genes, decompose the overall variability into a technical and biological part while later on focus on testing changes in mean expression and expression variability. The later allows the detection of global as well as gene-specific changes in variability and we exemplify a comparison that reveals heterogeneously induced genes hinting at possible, early cell fate commitment processes.  
 
 #Abstracts should be up to 300 words and provide a succinct summary of the article. Although the abstract should explain why the article might be interesting, care should be taken not to inappropriately over-emphasise the importance of the work described in the article. Citations should not be used in the abstract, and the use of abbreviations should be minimized.
