--- a/Workflow/Workflow.Rmd
+++ b/Workflow/Workflow.Rmd
@@ -19,10 +19,28 @@ author:
   - The Alan Turing Institute, British Library, 96 Euston Road, London 
   NW1 2DB, UK
   email: catalina.vallejos@igmm.ed.ac.uk
-abstract: Heterogeneity in cellular responses is an inherent feature of biological systems. Stochastic and deterministic differences between individual cells on the transcriptional level introduce expression variability in cell populations. Single-cell RNA sequencing (scRNA-Seq) has been introduced to quantify expression variability across hundreds to thousands of cells.While scRNA-Seq is prone to high degrees of technical noise, the addition of external spike-in RNA or repetitions of experiments can be used to quantify technical noise. Here, we introduce a computational workflow to quantify and test for changes in biological variability in gene expression from scRNA-Seq data using the BASiCS package. The outlined analysis highlights possible confounding effects on variability measures, such as expression level and technical noise, and gives detailed analysis how to avoid these confounders. Furthermore, we exemplify analsyses of a dataset containing spike-in genes, such as data generated using the Fluidigm\@ C1 system, as well as a droplet-based dataset for which reads of spike-in RNA is not available. We will first introduce simple analyses to find highly and lowly variable genes, decompose the overall variability into a technical and biological part while later on focus on testing changes in mean expression and expression variability. The later allows the detection of global as well as gene-specific changes in variability and we exemplify a comparison that reveals heterogeneously induced genes hinting at possible, early cell fate commitment processes.  
+abstract: Cell-to-cell heterogeneity in gene expression is an inherent feature 
+of biological systems. Single-cell RNA sequencing can be used to quantify this 
+heterogeneity, but it is prone to strong technical noise. Here, we describe a 
+computational workflow that uses the BASiCS Bioconductor package to robustly 
+quantify cell-to-cell expression variability within and between known cell 
+populations (e.g.~experimental conditions or cell types). We illustrate how 
+BASiCS can identify highly and lowly variable genes within a cell population. 
+We also show how BASiCS can highlight changes in gene expression variability 
+between cell populations, while avoiding confounding effects related to 
+technical noise or changes in overall abundance. Using publicly available 
+datasets, we guide users through a complete pipeline which includes preliminary 
+steps for quality control and data exploration using the scater Bioconductor 
+package. Two case studies are described. The first uses data generated using the 
+Fluidigm\@ C1 system, in which spike-in RNA molecules are used in order to 
+quantify technical noise. The second dataset was generated using a droplet-based 
+system, for which spike-in RNA is not available. The latter analysis provides an 
+example in which differential variability testing reveals insights regarding a 
+possible early cell fate commitment process. 
 
 #Abstracts should be up to 300 words and provide a succinct summary of the article. Although the abstract should explain why the article might be interesting, care should be taken not to inappropriately over-emphasise the importance of the work described in the article. Citations should not be used in the abstract, and the use of abbreviations should be minimized.
-keywords: Single-cell RNA sequencing, expression variability, noise, differential expression testing
+keywords: Single-cell RNA sequencing, expression variability, noise, 
+differential expression testing
 bibliography: BASiCSworkflow.bib
 output: BiocWorkflowTools::f1000_article
 #output:
